--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>Valid:</strong>
-  <%= @vote.valid %>
+  <strong>Valid vote:</strong>
+  <%= @vote.valid_vote %>
 </p>
 
 <p>
-  <strong>Invalid:</strong>
-  <%= @vote.invalid %>
+  <strong>Invalid vote:</strong>
+  <%= @vote.invalid_vote %>
 </p>
 
 <p>
