admin active_skin

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -5,13 +5,21 @@
 // Active Admin source.
 //
 // For example, to change the sidebar width:
-// $sidebar-width: 242px;
+//$sidebar-width: 242px;
 
 // Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
 
+
+$skinActiveColor: #18443e;
+$skinHeaderBck: #003232;
+$panelHeaderBck: #310d44;
+
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+$skinLogo: url("http://static.guim.co.uk/sys-images/Politics/Pix/pictures/2004/06/10/ballotpaperpa128bis.jpg") no-repeat 0 0;
+
+@import "active_skin";
