--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -12,7 +12,7 @@
 @import "active_admin/base";
 
 
-$skinActiveColor: #18443e;
+$skinActiveColor: #71a28d;
 $skinHeaderBck: #003232;
 $panelHeaderBck: #310d44;
 
