--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -20,6 +20,6 @@ $panelHeaderBck: #310d44;
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
-$skinLogo: url("http://static.guim.co.uk/sys-images/Politics/Pix/pictures/2004/06/10/ballotpaperpa128bis.jpg") no-repeat 0 0;
+$skinLogo: url("http://www.tattooeducation.com/style-images/store-checkout.png") no-repeat 0 0;
 
 @import "active_skin";
