--- a/app/views/districts/show.html.erb
+++ b/app/views/districts/show.html.erb
@@ -14,6 +14,21 @@
   <strong>Mandate:</strong>
   <%= @district.mandate %>
 </p>
-
+<p>
+  <strong>Invalid vote:</strong>
+  <%= @district.mandate %>
+</p>
+<p>
+  <strong>Empty vote:</strong>
+  <%= @district.empty_vote %>
+</p>
+<p>
+  <strong>Other vote:</strong>
+  <%= @district.other_vote %>
+</p>
+<p>
+  <strong>Issued card:</strong>
+  <%= @district.issued_voting_card %>
+</p>
 <%= link_to 'Edit', edit_district_path(@district) %> |
 <%= link_to 'Back', districts_path %>
