liczenie głosów + widoki

--- a/app/views/commitees/_form.html.erb
+++ b/app/views/commitees/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    Nazwa<br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :logo %><br>
+    Ścieżka do logo partii<br>
     <%= f.text_area :logo %>
   </div>
   <div class="field">
-    <%= f.label :party %><br>
+    Skrót partii<br>
     <%= f.text_field :party %>
   </div>
   <div class="actions">
