--- a/app/views/commitees/edit.html.erb
+++ b/app/views/commitees/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @commitee %> |
-<%= link_to 'Back', commitees_path %>
+<%= link_to 'Pokaż', @commitee %> |
+<%= link_to 'Wróć', commitees_path %>
