--- a/app/views/commitees/show.html.erb
+++ b/app/views/commitees/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nazwa:</strong>
   <%= @commitee.name %>
 </p>
 
@@ -11,9 +11,9 @@
 </p>
 
 <p>
-  <strong>Party:</strong>
+  <strong>Skrót partii:</strong>
   <%= @commitee.party %>
 </p>
 
-<%= link_to 'Edit', edit_commitee_path(@commitee) %> |
-<%= link_to 'Back', commitees_path %>
+<%= link_to 'Edytuj', edit_commitee_path(@commitee) %> |
+<%= link_to 'Wróć', commitees_path %>
