--- a/app/views/districts/_form.html.erb
+++ b/app/views/districts/_form.html.erb
@@ -12,31 +12,31 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :name %><br>
+      Nazwa wybierana z listy<br>
       <%= f.text_field :name %>
     </div>
     <div class="field">
-      <%= f.label :electorate %><br>
+      Elektorat domyślne<br>
       <%= f.number_field :electorate %>
     </div>
     <div class="field">
-      <%= f.label :mandate %><br>
+      Liczba mandatów domyślne<br>
       <%= f.number_field :mandate %>
     </div>
     <div class="field">
-      <%= f.label :invalid_vote %><br>
+      Głosy nieważne (wiele zaznaczeń)<br>
       <%= f.number_field :invalid_vote %>
     </div>
     <div class="field">
-      <%= f.label :empty %><br>
+      Głosy nieważne (puste)<br>
       <%= f.number_field :empty %>
     </div>
     <div class="field">
-      <%= f.label :other %><br>
+      Głosy nieważne (inna przyczyna)<br>
       <%= f.number_field :other %>
     </div>
     <div class="field">
-      <%= f.label :card %><br>
+      Wydane karty<br>
       <%= f.number_field :card %>
     </div>
     <div class="actions">
