--- a/app/views/voivodeships/edit.html.erb
+++ b/app/views/voivodeships/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @voivodeship %> |
-<%= link_to 'Back', voivodeships_path %>
+<%= link_to 'Pokaż', @voivodeship %> |
+<%= link_to 'Wróć', voivodeships_path %>
