--- a/app/views/voivodeships/show.html.erb
+++ b/app/views/voivodeships/show.html.erb
@@ -5,5 +5,5 @@
   <%= @voivodeship.name %>
 </p>
 
-<%= link_to 'Edit', edit_voivodeship_path(@voivodeship) %> |
-<%= link_to 'Back', voivodeships_path %>
+<%= link_to 'Edytuj', edit_voivodeship_path(@voivodeship) %> |
+<%= link_to 'Wróć', voivodeships_path %>
