--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -11,10 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :vote %><br>
+    <div class="field">
+    Ilość głosów<br>
     <%= f.number_field :vote %>
   </div>
+    trzeba dodać wybór komitetu i okręgu z listy rozwijanej
   <div class="actions">
     <%= f.submit %>
   </div>
