--- a/app/views/votes/edit.html.erb
+++ b/app/views/votes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Vote</h1>
+<h3>Edycja liczby oddanych ważnych głosów. Wpisz poprawną ilosć:</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vote %> |
-<%= link_to 'Back', votes_path %>
+<%= link_to 'Pokaż', @vote %> |
+<%= link_to 'Wróć', votes_path %>
