--- a/app/views/districts/edit.html.erb
+++ b/app/views/districts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing District</h1>
+<h1>Edycja oddancyh głosów dla okręgu</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @district %> |
-<%= link_to 'Back', districts_path %>
+<%= link_to 'Pokaż', @district %> |
+<%= link_to 'Wróć', districts_path %>
