--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -1,39 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Districts</h1>
+<h1>Lista okręgów</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Electorate</th>
-      <th>Mandate</th>
-      <th>Invalid vote</th>
-      <th>Empty vote</th>
-      <th>Other vote</th>
-      <th>Issued card</th>
+      <th>Nazwa</th>
+      <th>Elektorat</th>
+      <th>Liczba mandatów</th>
+
+      <th>Wydane karty:</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @districts.each do |district| %>
-      <tr>
-        <td><%= district.name %></td>
-        <td><%= district.electorate %></td>
-        <td><%= district.mandate %></td>
-        <td><%= district.invalid_vote %></td>
-        <td><%= district.empty %></td>
-        <td><%= district.other %></td>
-        <td><%= district.card %></td>
-        <td><%= link_to 'Show', district %></td>
-        <td><%= link_to 'Edit', edit_district_path(district) %></td>
-        <td><%= link_to 'Destroy', district, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <tr>
+          <td><%= district.name %></td>
+          <td><%= district.electorate %></td>
+          <td><%= district.mandate %></td>
+
+          <td><%= district.card %></td>
+          <td><%= link_to 'Pokaż', district %></td>
+          <td><%= link_to 'Edytuj', edit_district_path(district) %></td>
+          <td><%= link_to 'Usuń', district, method: :delete, data: { confirm: 'Na pewno?' } %></td>
+        </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New District', new_district_path %>
+<h3><%= link_to 'Dodaj okręg', new_district_path %></h3>
