--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,1 +1,2 @@
-<h1>zarejestrowano</h1>
+<h1>Zarejestrowano</h1>
+<h2>Zwróć się do administratora w celu nadania roli użytkownika komisji centralnej lub okręgowej.</h2>
