--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Pokaż', @user %> |
+<%= link_to 'Wróć', users_path %>
