--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Listing users</h1>
+<p id="notice"><%= notice %></p>
+<h1>Użytkownicy</h1>
 <table>
   <thead>
   <tr>
     <th>Login</th>
-    <th>Role</th>
+    <th>Typ użytkownika</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -12,10 +13,11 @@
       <tr>
         <td><%= user.login %></td>
         <td><%= user.role %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Pokaż', user %></td>
       </tr>
   <% end %>
   </tbody>
 </table>
 <br>
-<%= link_to 'New User', new_user_path %>
+
+<br>
