--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-  <strong>Role:</strong>
+  <strong>Typ użytkownika:</strong>
   <%= @user.role %>
 </p>
-<%= link_to 'Back', users_path %>
+<%= link_to 'Wróć', users_path %>
