--- a/app/views/users/update.html.erb
+++ b/app/views/users/update.html.erb
@@ -4,12 +4,12 @@
   <%= @user.login %>
 </p>
 <p>
-  <strong>Password:</strong>
+  <strong>Hasło:</strong>
   <%= @user.password %>
 </p>
 <p>
-  <strong>Role:</strong>
+  <strong>Typ użytkownika:</strong>
   <%= @user.role %>
 </p>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edytuj', edit_user_path(@user) %> |
+<%= link_to 'Wróć', users_path %>
