--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,22 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Votes</h1>
+<h1>Ważne głosy oddane na poszczególne komitety wyborcze</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Vote</th>
+      <th>Nazwa okręgu</th>
+      <th>Komitet wyborczy</th>
+      <th>Ilość głosów ważnych</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @votes.each do |vote| %>
       <tr>
+        <td><%= vote.nazwad %></td>
+        <td><%= vote.nazwac %></td>
         <td><%= vote.vote %></td>
-        <td><%= link_to 'Show', vote %></td>
-        <td><%= link_to 'Edit', edit_vote_path(vote) %></td>
-        <td><%= link_to 'Destroy', vote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Pokaż', vote %></td>
+        <td><%= link_to 'Edytuj', edit_vote_path(vote) %></td>
+        <td><%= link_to 'Usuń', vote, method: :delete, data: { confirm: 'Na pewno?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Vote', new_vote_path %>
+<h3><%= link_to 'Dodaj głosy', new_vote_path %></h3>
