--- a/app/views/commitees/_form.html.erb
+++ b/app/views/commitees/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    Nazwa<br>
+    <strong>Nazwa:</strong><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    Ścieżka do logo partii<br>
+    <strong>Logo partii:</strong><br>
     <%= f.text_area :logo %>
   </div>
   <div class="field">
-    Skrót partii<br>
+    <strong>Skrót partii:</strong><br>
     <%= f.text_field :party %>
   </div>
   <div class="actions">
