--- a/app/views/districts/_form.html.erb
+++ b/app/views/districts/_form.html.erb
@@ -12,31 +12,31 @@
     <% end %>
 
     <div class="field">
-      Nazwa wybierana z listy<br>
+      <strong>Nazwa wybierana z listy</strong><br>
       <%= f.text_field :name %>
     </div>
     <div class="field">
-      Elektorat domyślne<br>
+      <strong>Elektorat domyślne</strong><br>
       <%= f.number_field :electorate %>
     </div>
     <div class="field">
-      Liczba mandatów domyślne<br>
+      <strong>Liczba mandatów domyślne</strong><br>
       <%= f.number_field :mandate %>
     </div>
     <div class="field">
-      Głosy nieważne (wiele zaznaczeń)<br>
+      <strong>Głosy nieważne (wiele zaznaczeń)</strong><br>
       <%= f.number_field :invalid_vote %>
     </div>
     <div class="field">
-      Głosy nieważne (puste)<br>
+      <strong>Głosy nieważne (puste)</strong><br>
       <%= f.number_field :empty %>
     </div>
     <div class="field">
-      Głosy nieważne (inna przyczyna)<br>
+      <strong>Głosy nieważne (inna przyczyna)</strong><br>
       <%= f.number_field :other %>
     </div>
     <div class="field">
-      Wydane karty<br>
+      <strong>Wydane karty</strong><br>
       <%= f.number_field :card %>
     </div>
     <div class="actions">
