--- a/app/views/districts/show.html.erb
+++ b/app/views/districts/show.html.erb
@@ -4,7 +4,19 @@
   <strong>Nazwa okręgu:</strong>
   <%= @district.name %>
 </p>
+<p>
+  <strong>Elektorat:</strong>
+  <%= @district.electorate %>
+</p>
+<p>
+  <strong>Liczba mandatów:</strong>
+  <%= @district.mandate %>
+</p>
+<br>
+<br>
 
+<br>
+<br>
 <p>
   <strong>Głosy nieważne (wiele zaznaczeń):</strong>
   <%= @district.invalid_vote %>
