--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= link_to "Rejestracja", new_user_path %> |
     <%= link_to "Zaloguj się", new_user_session_path %>
 <% else %>
+    <%= link_to "Użytkownik", @user %> |
     <%= link_to "Wyloguj się", user_session_path, :method => :delete, :confirm => "Na pewno?" %>
 <% end %>
 <%= yield %>
