--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -23,8 +23,8 @@
 
           <td><%= district.card %></td>
           <td><%= link_to 'Pokaż', district %></td>
-          <td><%= link_to 'Edytuj', edit_district_path(district) %></td>
-          <td><%= link_to 'Usuń', district, method: :delete, data: { confirm: 'Na pewno?' } %></td>
+          <td><%= link_to 'Edytuj', edit_district_path(district) if can? :update, @district %></td>
+          <td><%= link_to 'Usuń', district, method: :delete, data: { confirm: 'Na pewno?' } if can? :destroy, District%></td>
         </tr>
     <% end %>
   </tbody>
