--- a/app/views/commitees/edit.html.erb
+++ b/app/views/commitees/edit.html.erb
@@ -1,6 +1,32 @@
-<h1>Editing Commitee</h1>
+<h1>Edycja Komitetu Wyborczego</h1>
 
-<%= render 'form' %>
+<%= form_for(@commitee) do |f| %>
+    <% if @commitee.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@commitee.errors.count, "error") %> prohibited this commitee from being saved:</h2>
+
+          <ul>
+            <% @commitee.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+      <strong>Nazwa:</strong><br>
+      <%= f.text_field :name %>
+    </div>
+    <div class="field">
+      <strong>Skrót partii:</strong><br>
+      <%= f.text_field :party %>
+    </div>
+    <%= f.file_field :avatar %>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 
 <%= link_to 'Pokaż', @commitee %> |
 <%= link_to 'Wróć', commitees_path %>
+
+<% end %>
