--- a/app/views/commitees/edit.html.erb
+++ b/app/views/commitees/edit.html.erb
@@ -23,7 +23,7 @@
     </div>
     <%= f.file_field :avatar %>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit "Zapisz" %>
     </div>
 
 <%= link_to 'Pokaż', @commitee %> |
