--- a/app/views/districts/_form.html.erb
+++ b/app/views/districts/_form.html.erb
@@ -40,6 +40,6 @@
       <%= f.number_field :card %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit "Zapisz" %>
     </div>
 <% end %>
