--- a/app/views/districts/edit.html.erb
+++ b/app/views/districts/edit.html.erb
@@ -32,7 +32,7 @@
       <%= f.number_field :card %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit "Zapisz" %>
     </div>
 
 <%= link_to 'Pokaż', @district %> |
