--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Zarejestrowano</h1>
-<h2>Zwróć się do administratora w celu nadania roli użytkownika komisji centralnej lub okręgowej.</h2>
+<h1>Zarejestrowano nowego użytkownika!</h1>
+<h2>Zwróć się do administratora w celu nadania roli użytkownika komisji centralnej lub okręgowej.<br>
+<br>e-mail: admin@example.com</h2>
