--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -14,9 +14,8 @@
     <div class="field">
     Ilość głosów<br>
     <%= f.number_field :vote %>
-  </div>
-    trzeba dodać wybór komitetu i okręgu z listy rozwijanej
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Zapisz" %>
   </div>
 <% end %>
