--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Nazwa</th>
+      <th>Nazwa województwa</th>
+      <th>Nazwa okręgu</th>
       <th>Elektorat</th>
       <th>Liczba mandatów</th>
 
@@ -15,21 +16,20 @@
   </thead>
 
   <tbody>
+
     <% @districts.each do |district| %>
+          <% # if district.vo == 1 %>
         <tr>
+          <td><%= district.voivodeship.name %></td>
           <td><%= district.name %></td>
           <td><%= district.electorate %></td>
           <td><%= district.mandate %></td>
-
           <td><%= district.card %></td>
           <td><%= link_to 'Pokaż', district %></td>
           <td><%= link_to 'Edytuj', edit_district_path(district) if can? :update, @district %></td>
           <td><%= link_to 'Usuń', district, method: :delete, data: { confirm: 'Na pewno?' } if can? :destroy, District%></td>
         </tr>
+           <% # end %>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<h3><%= link_to 'Dodaj okręg', new_district_path %></h3>
